--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/the-big-picture.css" rel="stylesheet">
-    <link rel=icon href=/images/favicon.png>
+    <link rel=icon href=https://github.com/wangrar/wangrar/blob/master/images/favicon.png?raw=true>
 
   </head>
 
