--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <h1 class="mt-5">
               <p>I'm Wang(rar) a Graphic Designer currently living in Ho Chi Minh City, Vietnam.</p>
               <p> I do Branding + illustration + UI/UX Design</p>
-              <p> — Don't see my work at <a href="https://www.behance.net/quanglatoi" target="_blank">Portfolio</a>
-              <p> — Talk to me <a href="mailto:anhquang1806@gmail.com?Subject=Hello%20Wang" target="_top">anhquang1806@gmail.com﻿.</a>
+              <p> — Don't see my <a href="https://www.behance.net/quanglatoi" target="_blank">Work</a>
+              <p> — Contact me <a href="mailto:anhquang1806@gmail.com?Subject=Hello%20Wang" target="_top">anhquang1806@gmail.com﻿.</a>
               </h1>
           </div>
         </div>
