--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="css/the-big-picture.css" rel="stylesheet">
     <link rel=icon href=https://github.com/wangrar/wangrar/blob/master/images/favicon.png?raw=true>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed" rel="stylesheet">
 
   </head>
 
