--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <p>I'm Wang(rar) a Graphic Designer currently living in Ho Chi Minh City, Vietnam.</p>
               <p> I do Branding + illustration + UI/UX Design</p>
               <p> — Don't see my <a href="https://www.behance.net/quanglatoi" target="_blank">Work</a>
-              <p> — Contact me <a href="mailto:anhquang1806@gmail.com?Subject=Hello%20Wang" target="_top">here﻿.</a>
+              <p> — Contact me <a href="mailto:anhquang1806@gmail.com?Subject=Hello%20Wang" target="_top">Here</a>
               </h1>
           </div>
         </div>
